...
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v8y-Gx-uQM">
                                <rect key="frame" x="138" y="473" width="121" height="54"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.74991165869999998" green="1" blue="0.3411885777" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
                                <color key="tintColor" white="1" alpha="0.60000002379999995" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Start">
                                    <color key="titleColor" red="0.1237633313" green="0.31850126950000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
                                <connections>
                                    <action selector="start:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9pa-wO-fGO"/>
                                </connections>
                            </button>
...
                                <nil key="highlightedColor"/>
                                <size key="shadowOffset" width="0.0" height="0.0"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Ng-De-VCy">
                                <rect key="frame" x="277" y="572" width="32" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Next"/>
                                <connections>
                                    <action selector="runQuestion:" destination="07q-6x-OM2" eventType="touchUpInside" id="tqy-1x-PT5"/>
                                </connections>
                            </button>
                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eLS-mK-ubM">
                                <rect key="frame" x="84" y="347" width="91" height="86"/>
...
